--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   proxy:
-    image: traefik:1.7.19
+    image: traefik:2.2
     container_name: traefik
     networks:
       - traefik
@@ -11,34 +11,44 @@ services:
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "./config:/etc/traefik"
+      - "./config:/etc/traefik/"
     restart: unless-stopped
     command:
-      - --accessLog
-      - --logLevel=INFO
-      - --defaultEntryPoints=http,https
-      - --entryPoints=Name:http Address::80 #Redirect.EntryPoint:https
-      - --entryPoints=Name:https Address::443 TLS TLS.DefaultCertificate.Cert:/etc/traefik/ssl/server.crt  TLS.DefaultCertificate.Key:/etc/traefik/ssl/server.key
-      - --docker.endpoint=unix:///var/run/docker.sock
-      - --docker.domain=${TRAEFIK_DOMAIN}
-      - --docker.watch=true
-      - --docker.exposedbydefault=false
-      - --web
-      - --web.address=:8080
-      - --acme
-      - --acme.email=${TRAEFIK_EMAIL}
-      - --acme.storage=/etc/traefik/acme.json
-      - --acme.entryPoint=https
-      - --acme.httpchallenge.entrypoint=http
+      - --accesslog=true
+      - --api=true
+      - --api.dashboard=true
+      - --api.insecure=false
+      - --api.debug=false
+      - --providers.docker=true
+      - --providers.docker.endpoint=unix:///var/run/docker.sock
+      - --providers.docker.exposedByDefault=false
+      - --providers.docker.swarmmode=false
+      - --providers.docker.watch=false
+      - --providers.file.directory=/etc/traefik
+      - --providers.file.watch=true
+      - --entrypoints.web=true
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure=true
+      - --entrypoints.websecure.address=:443
+      - --log=true
+      - --log.level=ERROR
+      - --certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_EMAIL}
+      - --certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme.json
+      - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
     labels:
       - "traefik.enable=true"
-      - "traefik.frontend.rule=Host:${TRAEFIK_DOMAIN}"
-      - "traefik.frontend.entryPoints=http, https"
-      - "traefik.frontend.redirect.entryPoint=https"
-      - "traefik.frontend.redirect.permanent=true"
-      - "traefik.frontend.auth.basic.users=admin:$$apr1$$o1HmXW0i$$wWgVewL1kLu9gaqmMDh6u/"
-      - "traefik.port=8080"
-      - "traefik.backend=traefik"
+      - "traefik.http.middlewares.auth.basicAuth.users=admin:${TRAEFIK_PASSWORD}"
+      - "traefik.http.middlewares.redirect-to-https.redirectScheme.scheme=https"
+      - "traefik.http.middlewares.redirect-to-https.redirectScheme.permanent=true"
+      - "traefik.http.routers.traefik.rule=Host(`${TRAEFIK_DOMAIN}`)"
+      - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.traefik.entryPoints=web"
+      - "traefik.http.routers.traefik.middlewares=auth,redirect-to-https"
+      - "traefik.http.routers.traefik-https.rule=Host(`${TRAEFIK_DOMAIN}`)"
+      - "traefik.http.routers.traefik-https.service=api@internal"
+      - "traefik.http.routers.traefik-https.entryPoints=websecure"
+      - "traefik.http.routers.traefik-https.middlewares=auth"
+      - "traefik.http.routers.traefik-https.tls=true"
 
 networks:
   traefik:
