--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - --logLevel=INFO
       - --defaultEntryPoints=http,https
       - --entryPoints=Name:http Address::80 #Redirect.EntryPoint:https
-      - --entryPoints=Name:https Address::443 TLS TLS.DefaultCertificate.Cert:/etc/traefik/ssl/server.crt  TLS.DefaultCertificate.Key:/etc/traefik/ssl/server.key
+      - --entryPoints=Name:https Address::443 TLS TLS.DefaultCertificate.Cert:/etc/traefik/certs/server.crt  TLS.DefaultCertificate.Key:/etc/traefik/certs/server.key
       - --docker.endpoint=unix:///var/run/docker.sock
       - --docker.domain=${TRAEFIK_DOMAIN}
       - --docker.watch=true
@@ -36,7 +36,7 @@ services:
       - "traefik.frontend.entryPoints=http, https"
       - "traefik.frontend.redirect.entryPoint=https"
       - "traefik.frontend.redirect.permanent=true"
-      - "traefik.frontend.auth.basic.users=admin:$$apr1$$o1HmXW0i$$wWgVewL1kLu9gaqmMDh6u/"
+      - "traefik.frontend.auth.basic.users=admin:${TRAEFIK_PASSWORD}"
       - "traefik.port=8080"
       - "traefik.backend=traefik"
 
